--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,8 +1,10 @@
 [fluid-name]
 uranium-sludge=Uranium sludge
+mineral-sludge=Mineral sludge
 
 [entity-name]
 uranium-sludge=Uranium sludge
+mineral-sludge=Mineral sludge
 
 [recipe-name]
 uranium-sludge-processing=Uranium sludge processing
